# degiro

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt  return.py
conf/base/: catalog.yml
conf/base/parameters/: data_prep.yml
src/: __init__.py  dataset.py  pipeline.py  returns.py
src/.ipynb_checkpoints/: example-checkpoint.ipynb
src/degiro_app/: __init__.py  dataset.py  pipeline.py  pipeline_old.py  returns_old.py  stocks.py
src/degiro_app/pipelines/data_processing/: nodes.py  pipeline.py
src/tests/pipelines/data_prep/: test_pipeline.py
